# algebra_read

./: CMakeLists.txt  Test.cpp  functions.cpp  functions.h  matrix_read.cpp
